// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetPageChangedView renders with subtitle=test subtitle content and feature flag= false 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    test title
  </h1>
  <div
    className="target-page-changed-subtitle"
  >
    test subtitle content
  </div>
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="test toggle label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;

exports[`TargetPageChangedView renders with subtitle=undefined and feature flag= false 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    test title
  </h1>
  <div
    className="target-page-changed-subtitle"
  />
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="test toggle label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;

exports[`TargetPageChangedView renders with subtitle=undefined and feature flag= true 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    test title
  </h1>
  <div
    className="target-page-changed-subtitle"
  />
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="test toggle label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page has changed. Use the start over button to scan the new target page.
  </p>
</div>
`;
